# bilue-fundsmart

./: .dockerignore  .gitignore  PRESENTATION.md  README.md  REPORT.md  SETUP.md  fundsmart_ai_agentic_pipeline_design_spec_v2.md  pyproject.toml  synthetic_test_case_generation_spec.md
alembic/: alembic.ini
alembic/migrations/: env.py
alembic/migrations/versions/: bf6859228770_create_triage_service_tables.py
data/sample_complains/: sample1.txt  sample2.txt
data/sythetic_tests/: synthetic_generation_notes.md
docs/: Bilue_AI_Engineer_Test_Seed_Complaints.md
evaluation/: triage_service_evaluation.ipynb
infra/: Dockerfile.sythetic_data_generation  Dockerfile.triage_service  docker-compose.yml
sample_complains/: sample3.txt
scripts/: run_triage_service_evaluation.sh
services/sythetic_data_generation/: .env.example  README.md  __init__.py  app.py  llm_client.py  prompts.py  schemas.py
services/sythetic_data_generation/reference/: sample_cases.jsonl
services/triage_service/: .env.example  README.md  __init__.py  app.py  cli.py  db.py  graph.py  llm_client.py  models.py  prompts.py  schemas.py
sythetic_tests/: gold_labels.jsonl  synthetic_complaints.jsonl  synthetic_generated.jsonl  synthetic_tests.jsonl
tests/: test_app.py  test_graph.py  test_llm_client.py  test_prompts.py  test_schemas.py  test_synthetic_data_generation_app.py  test_synthetic_data_generation_schemas.py
triage_service/: README.md  app.py  db.py  graph.py  llm_client.py  models.py  prompts.py  schemas.py
typer/: logger.py  main.py
