[project]
name = "hiring-confinqa"
version = "0.1.0"
description = "ConfinQA assignment data processing and assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer==0.12.0",
  "alembic>=1.13,<2",
  "click==8.1.7",
  "dotenv>=0.9.9",
  "fastapi>=0.111,<1",
  "ipython>=8,<9",
  "langchain-core>=0.3,<1",
  "langchain-openai>=0.3,<1",
  "langgraph>=0.4,<1",
  "langgraph-checkpoint-postgres>=2,<3",
  "numpy>=1.26,<3",
  "openai>=1,<2",
  "openpyxl>=3.1,<4",
  "pandas>=2.2.3",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic>=2.11.4",
  "pytest>=8,<9",
  "pysbd>=0.3,<1",
  "python-dotenv>=1,<2",
  "datasets>=2,<5",
  "ragas>=0.2,<1",
  "rank-bm25>=0.2.2,<0.3",
  "requests>=2.31,<3",
  "ruff>=0.11.10",
  "scikit-learn>=1.4,<2",
  "sentence-transformers>=3,<6",
  "six>=1.16,<2",
  "sqlalchemy[asyncio]>=2,<3",
  "sympy>=1.12,<2",
  "tiktoken>=0.7,<1",
  "torch>=2.2,<3",
  "tqdm>=4.66,<5",
  "transformers>=4.40,<5",
  "uvicorn[standard]>=0.30,<1",
  "mypy>=1.15.0",
  "pylit>=0.8.0",
  "greenlet>=3,<4",
  "ipykernel>=6,<8",
  "uuid-utils>=0.16,<1",
  "pytest-cov>=5,<7",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["triage_service"]

[project.scripts]
triage-service = "triage_service.app:app"


[tool.ruff]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "F",  # default Ruff rules
    "E",  # pycodestyle Errors
    "W",  # pycodestyle Warnings
    "I",  # import sorting
    "UP", # modern syntax updates
    "B",  # flake8 common pitfalls & best practices
    "Q",  # flake8 consistent quotes
    "N",  # naming conventions,
]

ignore = [
    "B008",
    "D413",
    "E501",
    "W293",
    "W291",
    "PLR2004",
    "D101",
    "D102",
    "D103",
    "D400",
]

fixable = ["ALL"]

extend-select = [
    "PLR2004",
    "D101",
    "D102",
    "D103",
    "D201",
    "D202",
    "D215",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"rag_construction/rag_ingestion/cli/*.py" = ["D102", "D103", "T201"]
"rag_construction/rag_ingestion/db/*.py" = ["D102"]
"rag_construction/rag_ingestion/loaders/*.py" = ["D102"]
"rag_construction/rag_ingestion/vector/*.py" = ["D102", "T201"]
"rag_construction/rag_preparation/inspect_*.py" = ["D102", "D103", "T201"]
"rag_construction/rag_preparation/view_jsonl.py" = ["D102", "D103", "T201"]
"rag_construction/rag_schema/**/*.py" = ["D102", "D103"]
"rag_construction_pg/rag_ingestion/cli/*.py" = ["D102", "D103", "T201"]
"rag_construction_pg/rag_ingestion/db/*.py" = ["D102"]
"rag_construction_pg/rag_ingestion/loaders/*.py" = ["D102", "D103"]
"rag_construction_pg/rag_ingestion/vector/*.py" = ["D102", "D103", "T201"]
"rag_construction_pg/rag_preparation/inspect_*.py" = ["D102", "D103", "T201"]
"rag_construction_pg/rag_preparation/view_jsonl.py" = ["D102", "D103", "T201"]
"rag_construction_pg/rag_schema/**/*.py" = ["D102", "D103"]
"evaluation/*.ipynb" = ["D103", "E402"]

[tool.pytest.ini_options]
markers = [
  "integration: local service/database integration tests",
  "e2e: local end-to-end tests",
  "external: tests requiring real hosted APIs or paid model calls",
]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_globals = true
ignore_missing_imports = true
show_error_codes = true
strict = false
warn_return_any = true
plugins = ['pydantic.mypy']
packages = ["src"]
